fix: Footer links properly aligned

--- a/assets/_sass/components/_footer.scss
+++ b/assets/_sass/components/_footer.scss
@@ -25,6 +25,11 @@ footer {
 		}
 	}
 
+    .copyright {
+        display: flex;
+        align-items: center;
+    }
+
 	.social {
 		display: flex;
 		align-items: center;
